Use path_helper utility on macos for setting PATH

The old code builds a very basic path that excludes a lot of stuff like
per user paths.

BUG: 490926